--- a/roles/node_exporter/templates/node-exporter.service
+++ b/roles/node_exporter/templates/node-exporter.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 User=root
 Type=simple
-ExecStart={{ node_exporter_path }} --collector.textfile.directory /var/node_exporter/textfiles --web.listen-address={{ node_exporter_bind_addr }}
+ExecStart={{ node_exporter_path }} --web.listen-address=127.0.0.1:9100
 
 [Install]
 WantedBy=multi-user.target
